Add profile page and image assets for personal portfolio
- Created a new profile page (perfil.html) with sections for personal information, skills, projects, and contact details.
- Added multiple image assets for profile and project representation.
- Updated styles (styles.css) to enhance the layout and design of the profile page.
- Introduced a new stylesheet (stylesimg.css) for image gallery styling.
- Implemented feedback form (feedback.html) with associated styles (feedback.css) for user interaction.
- Developed a list page (listas.html) showcasing hobbies and a simple recipe, along with navigation links.
- Added main index page (index.html) for the NerdX club with introductory content and images.
- Included various CSS files for consistent styling across different pages.

--- a/Modulo 2/Aula 32/index.html
+++ b/Modulo 2/Aula 32/index.html
@@ -24,7 +24,10 @@
         <button type="submit">Adicionar</button>
       </form>
       <ul id="todo-list"></ul>
+      <ul id="comprados"></ul>
       <div class="tarefas"></div>
+      <h2 id="Tcomprados">itens Comprados: </h2>
+      <h2 id="contagem"></h2>
       <button id="clear-todos">Limpar lista</button>
     </div>
     <script src="app.js"></script>
